<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle">

            <TextView
                android:id="@+id/title_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTitle"
                android:gravity="center"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite3"
                android:textSize="45sp"
                tools:text="Movie Title" />
        </FrameLayout>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_btn_mvp"
            tools:text="Movie Poster" />

        <FrameLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textColor="@color/colorWhite3"
                    android:textSize="25sp"
                    tools:text="Movie year" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textColor="@color/colorWhite3"
                    android:textSize="25sp"
                    tools:text="Movie language" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating"
                    android:textColor="@color/colorWhite3"
                    android:textSize="25sp"
                    tools:text="Movie rating" />

                <ImageButton
                    android:id="@+id/button_fav"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:contentDescription="@string/cd_btn_fav"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:text="@string/add_fav"
                    tools:text="Favorite button" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite3"
                android:textSize="20sp"
                tools:text="Movie description" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/darker_gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/trailers"
                android:textSize="45sp"
                tools:text="Movie Trailer title" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorAccent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/colorTitle" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>





