<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="25dp"
    android:layout_marginTop="25dp"
    android:background="@drawable/mybackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/cd_btn_cls"
            android:src="@mipmap/ic_highlight_off_black_24dp"
            tools:text="Button close movie" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="35sp"
            android:text="@string/default_review"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            tools:text="Movie review" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/author"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            tools:text="Movie author" />
    </LinearLayout>
</ScrollView>
